templates.yaml
AWSTemplateFormationVersion: 2010-09-09

Description: >-
  AWS CloudFormation template for hands-on bastion host.

Metadata:
  Purpose:
    Description: "AWS CloudFormation template for hands-on bastion host."
  LICENSE: Apache License, Version 2.0

Parameters: #terraform에서 variables
  VpcId:
    Description: What VPC would you like to use.
    Type: AWS::EC2::VPC::Id
  
  LatestAMI:
    Description: Static reference to latest RedHat AMI
    Type: 'AWS::SSM::Parameter::Value<AWS::EC2::Image::Id>'
    Default: '/aws/service/ami-amazon-linux-latest/amzn2-ami-hvm-x86_64-gp2'
    AllowedValues:
      - '/aws/service/ami-amazon-linux-latest/amzn2-ami-hvm-x86_64-gp2' #### 

  KeyPair:
    Description: Which Key Pair would you like to use for remote access
    Type: 'AWS::EC2::KeyPair::KeyName'
  
  PublicSubnet1:
    Description: Public subnet in az1 for nat gateway
    Type: 'AWS::EC2::Subnet::Id'
  
  PublicSubnet2:
    Description: Public subnet in az2 for bastion host
    Type: 'AWS::EC2::Subnet::Id'

  PrivateSubnet1:
    Description: Private subnet in az1 for private ec2
    Type: 'AWS::EC2::Subnet::Id'
  
  PrivateSubnet2:
    Type: 'AWS::EC2::Subnet::Id'

  InstanceType:
    Description: Instance size for EC2 instance
    Type: String
    Default: t2.micro

  VPCCIDR:
    Type: String
    Description: CIDR block for the VPC.
    AllowedPattern: ^(([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])\.){3}([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])(\/(1[6-9]|2[0-8]))$
    Default: 10.0.0.0/16

  PublicSubnet1CIDR:
    Type: String
    Description: CIDR block for private subnet 1, located in Availability Zone 1.
    AllowedPattern: ^(([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])\.){3}([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])(\/(1[6-9]|2[0-8]))$

  PublicSubnet2CIDR:
    Type: String
    Description: CIDR block for private subnet 1, located in Availability Zone 1.
    AllowedPattern: ^(([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])\.){3}([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])(\/(1[6-9]|2[0-8]))$

  PrivateSubnet1CIDR:
    Type: String
    Description: CIDR block for private subnet 1, located in Availability Zone 1.
    AllowedPattern: ^(([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])\.){3}([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])(\/(1[6-9]|2[0-8]))$
  
  PrivateSubnet2CIDR:
    Type: String
    Description: CIDR block for private subnet 1, located in Availability Zone 1.
    AllowedPattern: ^(([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])\.){3}([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])(\/(1[6-9]|2[0-8]))$

Resources: #필수 옵션, 실질적인 정의 옵션 
  DhVPC:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: !Ref VPCCIDR
      Tags:
        - Key: Name
          Value: dh-vpc
        - Key: Creator
          Value: Dahyeon Kang
        - Key: Project
          Value: General/Edu
  PublicSubnet1:
    Type: AWS::EC2::Subnet
    Properties:
      AvailabilityZone: ap-northeast-2a
      VpcId: !Ref DhVPC
      CidrBlock: !Ref PublicSubnet1CIDR
      Tags:
        - Key: Name
          Value: dh-pubsub1
        - Key: Creator
          Value: Dahyeon Kang
        - Key: Project
          Value: General/Edu
  PublicSubnet2:
    Type: AWS::EC2::Subnet
    Properties:
      AvailabilityZone: ap-northeast-2c
      VpcId: !Ref DhVPC
      CidrBlock: !Ref PublicSubnet2CIDR
      Tags:
        - Key: Name
          Value: dh-pubsub2
        - Key: Creator
          Value: Dahyeon Kang
        - Key: Project
          Value: General/Edu
  PrivateSubnet1:
    Type: AWS::EC2::Subnet
    Properties:
      AvailabilityZone: ap-northeast-2a
      VpcId: !Ref DhVPC
      CidrBlock: !Ref PrivateSubnet1CIDR
      Tags:
        - Key: Name
          Value: dh-privsub1
        - Key: Creator
          Value: Dahyeon Kang
        - Key: Project
          Value: General/Edu
  PrivateSubnet2:
    Type: AWS::EC2::Subnet
    Properties:
      AvailabilityZone: ap-northeast-2c
      VpcId: !Ref DhVPC
      CidrBlock: !Ref PrivateSubnet2CIDR
      Tags:
        - Key: Name
          Value: dh-privsub2
        - Key: Creator
          Value: Dahyeon Kang
        - Key: Project
          Value: General/Edu
  InternetGateway:
    Type: AWS::EC2::InternetGateway
    Properties:
      Tags:
        - Key: Name
          Value: dh-igw
        - Key: Creator
          Value: Dahyeon Kang
        - Key: Project
          Value: General/Edu
  EIP:
    Type: AWS::EC2::EIP    ######
  NatGateway:
    Type: AWS::EC2::NatGateway
    Properties:
      AllocationId: !GetAtt EIP.AllocationId   ######
      SubnetId: !Ref PublicSubnet1
  PrivateRouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref DhVPC
  PrivateRoute:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId: !Ref PrivateRouteTable
      DestinationCidrBlock: 0.0.0.0/0
      NatGatewayId: !Ref NATGateway
  PrivateSubnet1RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref PrivateSubnet1
      RouteTableId: !Ref PrivateRouteTable
  AttachGateway:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      VpcId: !Ref DhVPC
      InternetGatewayId: !Ref InternetGateway
  PublicRouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref DhVPC
      Tags:
        - Key: Name
          Value: dh-pubroute1
        - Key: Creator
          Value: Dahyeon Kang
        - Key: Project
          Value: General/Edu
  PublicToIGW:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId: !Ref PublicRouteTable
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref InternetGateway
  PublicSubnet1RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref PublicSubnet1
      RouteTableId: !Ref PublicRouteTable
  PublicSubnet2RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref PublicSubnet2
      RouteTableId: !Ref PublicRouteTable
  EC2Instance:
    Type: AWS::EC2::Instance
    Properties:
      InstanceType: !Ref InstanceType
      SubnetId: !Ref PrivateSubnet1
      ImageId: !Ref LatestAMI
      KeyName: !Ref KeyPair
      SecurityGroupIds:
        - !GetAtt EC2SecurityGroup.GroupId
      Tags:
        - Key: Name
          Value: dh-ec2
        - Key: Creator
          Value: Dahyeon Kang
        - Key: Project
          Value: General/Edu
  EC2EIP:
    Type: AWS::EC2::EIP
    Properties:
      Domain: vpc
      InstanceId: !Ref EC2Instance
  BastionHost:
    Type: AWS::EC2::Instance
    Properties:
      InstanceType: !Ref InstanceType
      SubnetId: !Ref PublicSubnet1
      ImageId: !Ref LatestAMI
      KeyName: !Ref KeyPair
      SecurityGroupIds:
        - !GetAtt BastionSecurityGroup.GroupId
      Tags:
        - Key: Name
          Value: BastionHost
  EC2SecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Security Group for EC2 instance
      VpcId: !Ref DhVPC
      SecurityGroupIngress:
        - SourceSecurityGroupId: !GetAtt BastionSecurityGroup.GroupId
          IpProtocol: -1
      Tags:
        - Key: Name
          Value: dh-ec2-sg
        - Key: Creator
          Value: Dahyeon Kang
        - Key: Project
          Value: General/Edu
  BastionSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Security Group for Bastion Host
      VpcId: !Ref DhVPC
      SecurityGroupIngress:
        - CidrIp: 0.0.0.0/0
          IpProtocol: tcp
          FromPort: 22
          ToPort: 22
    Tags:
        - Key: Name
          Value: dh-bastion-sg
        - Key: Creator
          Value: Dahyeon Kang
        - Key: Project
          Value: General/Edu
